# PeerLens

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/warehouse/: peerlens.duckdb
docs/: agent.md  data_sources.md  evaluation.md  methodology.md
docs/eval/: records.json  report.md
src/peerlens/: cli.py  config.py
src/peerlens/agent/: answer.py  catalog.py  consistency.py  decide.py  execute.py  model.py  pipeline.py  plan.py  resolve.py
src/peerlens/app/: streamlit_app.py
src/peerlens/eval/: gold.json  harness.py  metrics.py  report.py
src/peerlens/ingest/: pull.py  scorecard.py  urban.py
src/peerlens/peers/: build.py  features.py  mahalanobis.py
src/peerlens/quality/: checks.py
src/peerlens/warehouse/: build.py  db.py  queries.py
tests/: conftest.py  test_agent_core.py  test_agent_pipeline.py  test_app_smoke.py  test_eval_harness.py  test_eval_metrics.py  test_gemini_model.py  test_peers.py  test_peers_build.py  test_quality.py  test_scorecard.py  test_socioeconomic.py  test_urban_client.py  test_warehouse.py
