[project]
name = "peerlens"
version = "0.1.0"
description = "PeerLens — a grounded natural-language insights agent over public higher-education data (correct or silent, never confidently wrong)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Phase 1 — ingest + warehouse + minimal app
    "httpx>=0.27",
    "polars>=1.0",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "streamlit>=1.36",
    # Phase 2 — peer math (Mahalanobis / standardization)
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Phase 3 — the agent (added when we get there; declared now for the map)
agent = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
peerlens = "peerlens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peerlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
